[package]
name = "rust"
version = "0.1.0"
authors = ["Avery <19372006+starsflower@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
num-bigint = "0.4"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"